# meta

./: .gitignore  .travis.yml  CMakeLists.txt  CMakelists.txt  CONTRIBUTING.md  Extras.cmake  FeatureTest.cmake  FeatureTest.txt  FlagsClang.cmake  FlagsMSVC.cmake  LICENSE  README.md  STYLE.md  appveyor.yml  configure.bat  configure.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ext/: libclang.cmake  libclang.txt
ext/liba/: CHANGELOG.md  CMakeLists.txt  LICENSE
ext/liba/include/a/: allocator.hxx  attributes.hxx  buffer.hxx  callback.hxx  csv.hxx  error.hxx  file.hxx  iconv.hxx  intrin.hxx  io.hxx  memory.hxx  platform.hxx  range.hxx  string.hxx  thread.hxx  timer.hxx  utilities.hxx  warnings.hxx
ext/liba/src/: CMakeLists.txt  file.cxx  timer.cxx
ext/liba/src/posix/: io.cxx
ext/liba/src/windows/: io.cxx
ext/liba/tests/: CMakeLists.txt  buffer.cxx  catch.hpp  csv.cxx  driver.cxx  stdafx.cxx  stdafx.hxx  string.cxx  time.cxx
include/a/: iconv.hxx  io.hxx  platform.hxx  utilities.hxx
include/a/optparse/: optparse.h
include/meta/: meta.hpp  parser.hpp  transform.hpp
include/meta/internal/: clang.hpp  clang_driver.hpp
lib/: CMakeLists.txt  lib.cpp  parser.cpp  transform.cpp
lib/a/: CMakeLists.txt
lib/a/windows/: io.cxx
src/: CMakeLists.txt  config.h.in  main.cpp  stdafx.cpp  stdafx.hpp
tests/: CMakeLists.txt  driver.cpp  parser.cpp
tests/tests/: enum.hpp  simple.hpp
